--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "method-override": "^3.0.0",
     "mocha": "^6.2.3",
     "mysql2": "^1.6.4",
-    "passport": "^0.4.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.5.0",
